# Strawr-Cli

./: .gitignore  Cargo.toml
assets/add/: initialize_env.ts
assets/bundled/add/: logger.ts  package-lock.json  package.json
assets/embedded/: image.config.json  tailwind_colors.json
docs/: image.md  limitations.md
examples/: confirm_action.rs  confirm_prompt.rs  keyring_delete.rs  keyring_get_or_set.rs  keyring_update.rs  multi_select_prompt.rs  password_prompt.rs  search_prompt.rs  select.rs  select_prompt.rs  select_with_filter.rs  select_with_search.rs  spinner.rs  text.rs  text_prompt.rs
src/: args.rs  constants.rs  error.rs  lib.rs  main.rs  traits.rs  utils.rs
src/assets/: initial_config.toml
src/cli/: args.rs  cli.rs  mod.rs
src/cli/commands/: mod.rs
src/cli/img/: args.rs  handle_command.rs
src/cli/snippets/: args.rs  mod.rs
src/commands/: add.rs  font.rs  git.rs  img.rs  mod.rs  vs.rs
src/commands/add/: mod.rs  utils.rs
src/commands/grab/: handle_command.rs  mod.rs  validation.rs
src/commands/img/: config.rs  handle_command.rs  mod.rs
src/commands/open/: mod.rs
src/commands/playground/: args.rs  mod.rs
src/commands/template/: command.rs  enums.rs  mod.rs  utils.rs
src/commands/uninstall/: mod.rs
src/config/: config.rs  constants.rs  default.rs  error.rs  initial_config.toml  logging.rs  mod.rs  parse.rs
src/config/impls/: default.rs  parse.rs
src/context/: context.rs  core.rs  error.rs  helpers.rs  initialize.rs  mod.rs  service.rs
src/core/: mod.rs
src/core/ai/: error.rs  mod.rs  models.rs
src/core/crypto/: decrypt.rs  encrypt.rs  error.rs  mod.rs
src/core/img/: error.rs
src/crypto/: decrypt_data.rs  encrypt_data.rs  get_or_prompt_keyring.rs  mod.rs
src/error/: cli.rs  cli_error.rs  io.rs  mod.rs  parse.rs  utils.rs
src/services/: mod.rs
src/state/: error.rs  get_storage_dir.rs  initialize.rs  mod.rs  parse_config.rs  parse_settings.rs  storage_dir.rs
src/utils/: add_to_clipboard.rs  clipboard.rs  editor.rs  get_or_prompt_keyring.rs  keychain.rs  keyring.rs  logger.rs  mod.rs  select.rs  spinner.rs  time.rs  trash.rs
test/: package.json
tests/: e2e.rs  integration.rs
tests/e2e/: template.rs
(+721 files in other folders)
