[package]
name = "strawr"
description = "CLI tool designed to streamline development workflows, automate repetitive tasks, and boost productivity for developers."
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
arboard = "3.4.1"
base64 = "0.22.1"
blurhash = "0.2.3"
clap = { version = "4.5.20", features = ["derive"] }
color-thief = "0.2.2"
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
env_logger = "0.11.6"
image = "0.25.5"
indicatif = "0.17.11"
inquire = "0.7.5"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"] }
libvips = "1.7.0"
log = "0.4.26"
mockito = "1.7.0"
mozjpeg = "0.10.13"
natord = "1.0.9"
opener = "0.7.2"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"]}
rpassword = "7.3.1"
rustyline = "15.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
simple_crypt = "0.2.3"
tempfile = "3.15.0"
thiserror = "2.0.12"
toml = "0.8.20"
trash = "5.2.2"
url = "2.5.4"
validator = { version = "0.20.0", features = ["derive"] }
walkdir = "2.5.0"
webp = "0.3.0"
